[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
known_third_party = ["pymap3d"]

[tool.mypy]
files = ["src", "Examples", "scripts"]

ignore_missing_imports = true
strict_optional = false
show_column_numbers = true
