[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
known_third_party = ["pymap3d"]

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C",   # flake8-comprehensions
    "Q",   # flake8-quotes
    "YTT", # flake8-2020
    "M",   # Meta rules
]
ignore = ["E501", "S101"]

[tool.mypy]
files = ["src", "Examples", "scripts"]

strict = true
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:divide by zero encountered in (divide|double_scalars|true_divide):RuntimeWarning",
    "ignore:This function is deprecated.*pyproj:DeprecationWarning",
    "ignore:invalid value encountered in (divide|arcsin|true_divide|double_scalars|remainder):RuntimeWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about function overloading
    "@overload",
]
