[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymap3d"
description = "pure Python (no prereqs) coordinate conversions, following convention of several popular Matlab routines."
keywords = ["coordinate-conversion", "geodesy"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Intended Audience :: Science/Research",
 "License :: OSI Approved :: BSD License",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
 "Topic :: Scientific/Engineering :: GIS"
]
requires-python = ">=3.7"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "pymap3d.__version__"}

[project.optional-dependencies]
tests = ["pytest", "pytest-timeout"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy",
  "types-python-dateutil", "types-requests"]
coverage = ["pytest-cov"]
format = ["black[jupyter]", "isort"]
core = ["python-dateutil", "numpy >= 1.10.0"]
full = ["astropy", "xarray"]
proj = ["pyproj"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
known_third_party = ["pymap3d"]

[tool.mypy]
files = ["src", "Examples", "scripts"]

ignore_missing_imports = true
strict_optional = false
show_column_numbers = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:divide by zero encountered in (divide|double_scalars|true_divide):RuntimeWarning",
    "ignore:This function is deprecated.*pyproj:DeprecationWarning",
    "ignore:invalid value encountered in (divide|arcsin|true_divide|double_scalars|remainder):RuntimeWarning",
]

[tool.coverage.run]
branch = true
source = "src/"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about function overloading
    "@overload",
]
