[metadata]
name = pymap3d
version = attr: src.pymap3d.__version__
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = pure Python (no prereqs) coordinate conversions, following convention of several popular Matlab routines.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
  coordinate conversion
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: GIS
license_files =
  LICENSE
project_urls =
    Documentation = https://geospace-code.github.io/pymap3d
    Source = https://github.com/geospace-code/pymap3d
    Tracker = https://github.com/geospace-code/pymap3d/issues

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy >= 0.800
  types-python-dateutil
  types-requests
full =
  python-dateutil
  numpy >= 1.10.0
  astropy
  xarray
testproj =
  pyproj
