[metadata]
name = pymap3d
version = attr: pymap3d.__version__
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = pure Python (no prereqs) coordinate conversions, following convention of several popular Matlab routines.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
  coordinate conversion
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: GIS
license_files =
  LICENSE
project_urls =
    Documentation = https://geospace-code.github.io/pymap3d
    Source = https://github.com/geospace-code/pymap3d
    Tracker = https://github.com/geospace-code/pymap3d/issues

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
include_package_data = true
package_dir=
    =src

[options.packages.find]
where=src

[options.package_data]
pymap3d = py.typed

[options.extras_require]
tests =
  pytest
coverage =
  pytest-cov
lint =
  ruff
  mypy >= 0.800
  types-python-dateutil
  types-requests
format =
  black[jupyter]
  isort
core =
  python-dateutil
  numpy >= 1.10.0
full =
  astropy
  xarray
  pandas
proj =
  pyproj
